login page footer overlaping issue fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -1034,7 +1034,7 @@ h1 {
     border: 0;
     box-shadow: none;
     padding: 0;
-    margin-top: 80px;
+    margin-top: 50px;
 }
 #login-cnt form {
     padding: 6% 0;
